# ag2n_iso

./: Cargo.toml  README.md
benches/: bench.rs
src/: canon_output.rs  dependency.rs  dependency_partition.rs  lib.rs  main.rs  nauty.rs  utilities.rs
