[package]
name = "ag2n_iso"
version = "0.1.0"
edition = "2024"

[dependencies]
bimap = "0.6.3"
hashbrown = "0.15.4"
itertools = "0.14.0"
nauty-Traces-sys = "0.9.0"
petgraph = "0.8.2"

# optimization
[profile.release]
codegen-units = 1
lto = true
# turn this to false for max performance
debug = true
panic = "abort"

# benchmarking
[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "bench"
harness = false
